--- a/pinto/produtos.css
+++ b/pinto/produtos.css
@@ -1,7 +1,14 @@
 header{
-background-color:gold
-
-
-
-
+background-color:rgb(238, 255, 0)
+}
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+}
+nav a{
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
