--- a/pinto/style.css
+++ b/pinto/style.css
@@ -8,7 +8,7 @@ p {
 h1 {
                     text-align: center;
                     font-weight: bold;
-                    background-color: aqua;
+                    background-color: rgb(98, 0, 255);
                     text-align: center;  
 }
 h2{  
